app/admin-ui/k8s/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  namespace: admin-ui
  labels:
    app: admin-ui
spec:
  type: ClusterIP
  selector:
    app: admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
